--- a/src/pages/01.html
+++ b/src/pages/01.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Page Title</title>
+    <title>さいしょ</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -34,7 +34,7 @@
           ボタン大
         </button>
         <button
-          class="text-basefont-medium rounded-full bg-gradient-to-tr from-gray-300 to-gray-200 px-6 py-2 text-white"
+          class="rounded-full bg-gradient-to-tr from-gray-300 to-gray-200 px-6 py-2 text-base font-bold text-white"
         >
           非活性
         </button>
