--- a/src/pages/02.html
+++ b/src/pages/02.html
@@ -33,11 +33,7 @@
         >
           ボタン大
         </button>
-        <button
-          class="rounded-full bg-gradient-to-tr from-gray-300 to-gray-200 px-6 py-2 text-base font-bold text-white"
-        >
-          非活性
-        </button>
+        <button class="btn-big-disable">非活性</button>
       </div>
       <div class="flex flex-row items-start gap-10">
         <button
