04 ボタン小の共通化

--- a/src/pages/02.html
+++ b/src/pages/02.html
@@ -37,17 +37,17 @@
       </div>
       <div class="flex flex-row items-start gap-10">
         <button
-          class="rounded-lg bg-gradient-to-tr from-orange-300 to-red-600 px-4 py-2 text-xs font-medium text-white drop-shadow-sm hover:opacity-80 hover:transition-all"
+          class="btn-small bg-gradient-to-tr from-orange-300 to-red-600"
         >
           ボタン小
         </button>
         <button
-          class="rounded-md bg-gradient-to-tr from-green-300 to-blue-600 px-4 py-2 text-xs text-white hover:opacity-80 hover:transition-all"
+          class="btn-small bg-gradient-to-tr from-green-300 to-blue-600"
         >
           ボタン小
         </button>
         <button
-          class="rounded-md bg-gradient-to-tr from-lime-300 to-teal-600 px-4 py-2 text-xs text-white hover:opacity-80 hover:transition-all"
+          class="btn-small bg-gradient-to-tr from-lime-300 to-teal-600"
         >
           ボタン小
         </button>
