05　ボタン小の非活性

--- a/src/pages/02.html
+++ b/src/pages/02.html
@@ -51,11 +51,7 @@
         >
           ボタン小
         </button>
-        <button
-          class="rounded-md bg-gradient-to-tr from-gray-300 to-gray-200 px-4 py-2 text-xs text-white"
-        >
-          非活性
-        </button>
+        <button class="btn-small-disable">非活性</button>
       </div>
     </div>
   </body>
