06 グラデパターンの共通化

--- a/src/pages/02.html
+++ b/src/pages/02.html
@@ -18,39 +18,15 @@
   <body>
     <div class="p-10">
       <div class="mb-10 flex flex-row items-start gap-10">
-        <button
-          class="btn-big bg-gradient-to-tr from-orange-300 to-red-600"
-        >
-          ボタン大
-        </button>
-        <button
-          class="btn-big bg-gradient-to-tr from-green-300 to-blue-600"
-        >
-          ボタン大
-        </button>
-        <button
-          class="btn-big bg-gradient-to-tr from-lime-300 to-teal-600"
-        >
-          ボタン大
-        </button>
+        <button class="btn-big fire">ボタン大</button>
+        <button class="btn-big water">ボタン大</button>
+        <button class="btn-big leaf">ボタン大</button>
         <button class="btn-big-disable">非活性</button>
       </div>
       <div class="flex flex-row items-start gap-10">
-        <button
-          class="btn-small bg-gradient-to-tr from-orange-300 to-red-600"
-        >
-          ボタン小
-        </button>
-        <button
-          class="btn-small bg-gradient-to-tr from-green-300 to-blue-600"
-        >
-          ボタン小
-        </button>
-        <button
-          class="btn-small bg-gradient-to-tr from-lime-300 to-teal-600"
-        >
-          ボタン小
-        </button>
+        <button class="btn-small fire">ボタン小</button>
+        <button class="btn-small water">ボタン小</button>
+        <button class="btn-small leaf">ボタン小</button>
         <button class="btn-small-disable">非活性</button>
       </div>
     </div>
