--- a/src/pages/02.html
+++ b/src/pages/02.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>２</title>
+    <title>2</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -16,18 +16,32 @@
     />
   </head>
   <body>
-    <div class="p-10">
+    <div class="container p-10">
       <div class="mb-10 flex flex-row items-start gap-10">
-        <button class="btn-big fire">ボタン大</button>
-        <button class="btn-big water">ボタン大</button>
-        <button class="btn-big leaf">ボタン大</button>
+        <button class="btn-big red">ボタン大</button>
+        <button class="btn-big blue">ボタン大</button>
+        <button class="btn-big green">ボタン大</button>
+
         <button class="btn-big-disable">非活性</button>
       </div>
-      <div class="flex flex-row items-start gap-10">
-        <button class="btn-small fire">ボタン小</button>
-        <button class="btn-small water">ボタン小</button>
-        <button class="btn-small leaf">ボタン小</button>
+      <div class="mb-10 flex flex-row items-start gap-10">
+        <button class="btn-small red">ボタン小</button>
+        <button class="btn-small blue">ボタン小</button>
+        <button class="btn-small green">ボタン小</button>
+
         <button class="btn-small-disable">非活性</button>
+      </div>
+      <div class="flex flex-row items-start gap-10">
+        <button
+          class="btn-big bg-gradient-to-tr from-yellow-200 to-orange-500"
+        >
+          ボタン大
+        </button>
+        <button
+          class="btn-small bg-gradient-to-tr from-pink-200 to-violet-500"
+        >
+          ボタン小
+        </button>
       </div>
     </div>
   </body>
