--- a/src/pages/02.html
+++ b/src/pages/02.html
@@ -44,5 +44,23 @@
         </button>
       </div>
     </div>
+    <hr />
+    <div id="component_button"></div>
+
+    <script
+      src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+
+    <!-- Load our React component. -->
+    <script
+      src="../js/button.js"
+      type="text/babel"
+    ></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </body>
 </html>
